[gd_scene load_steps=7 format=3 uid="uid://bcehap7a57s8l"]

[ext_resource type="Script" uid="uid://dmoxrpi5e2hec" path="res://scripts/UI/level_select.gd" id="1_t5gxd"]
[ext_resource type="StyleBox" uid="uid://002qwq5rvs87" path="res://assets/styles/sbf_light.tres" id="2_chg43"]
[ext_resource type="LabelSettings" uid="uid://cbw7oatl30dvl" path="res://assets/styles/label_33px.tres" id="2_rif6e"]
[ext_resource type="LabelSettings" uid="uid://v4nuv8jtylyb" path="res://assets/styles/label_11px.tres" id="3_chg43"]
[ext_resource type="Material" uid="uid://drlban6fsery" path="res://assets/shaders/ctt.tres" id="5_0ra34"]
[ext_resource type="Texture2D" uid="uid://j65nk3t7y8df" path="res://assets/sprites/weed_tile_bw.png" id="6_ty08u"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(3, 3)
script = ExtResource("1_t5gxd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 92.0
offset_top = 24.0
offset_right = 548.0
offset_bottom = 328.0

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 276
dragging_enabled = false
dragger_visibility = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/separation = 0
split_offset = 40
dragging_enabled = false
dragger_visibility = 2

[node name="placeholder" type="Label" parent="VBoxContainer/HSplitContainer/HSplitContainer"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/normal = ExtResource("2_chg43")
label_settings = ExtResource("3_chg43")

[node name="WorldCompletion" type="Label" parent="VBoxContainer/HSplitContainer/HSplitContainer"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/normal = ExtResource("2_chg43")
text = "Completion: 0%"
label_settings = ExtResource("3_chg43")
vertical_alignment = 1

[node name="LevelName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_styles/normal = ExtResource("2_chg43")
text = "Gotta Go Fast!"
label_settings = ExtResource("2_rif6e")
horizontal_alignment = 1

[node name="ButtonGrid" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
columns = 5

[node name="TimeToBeat" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_styles/normal = ExtResource("2_chg43")
text = "Time To Beat"
label_settings = ExtResource("2_rif6e")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(273, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0

[node name="placeholder2" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(15, 20)
layout_mode = 2
theme_override_styles/normal = ExtResource("2_chg43")
label_settings = ExtResource("3_chg43")
horizontal_alignment = 1

[node name="LevelNumber" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(73, 20)
layout_mode = 2
theme_override_styles/normal = ExtResource("2_chg43")
text = "Best Time:"
label_settings = ExtResource("3_chg43")
vertical_alignment = 1
clip_text = true

[node name="placeholder3" type="Label" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 20)
layout_mode = 2
theme_override_styles/normal = ExtResource("2_chg43")
label_settings = ExtResource("3_chg43")
horizontal_alignment = 1

[node name="LevelStats" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("2_chg43")
text = "Not Completed"
label_settings = ExtResource("3_chg43")
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -3

[node name="ViewportBackground" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
texture_filter = 1
material = ExtResource("5_0ra34")
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("6_ty08u")
stretch_mode = 1
metadata/_edit_use_anchors_ = true
